always do 80/20 split in tuner